--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/runtime": "^7.15.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
